# roscpp_matlab_parser

./: .gitignore  CMakeLists.txt  readme.md
config/: dependencies.txt  dependency_paths.txt  path.txt
include/parser_generator/: parser_generator.hpp
src/: bag_analyzer.cpp  main.cpp  message_analyzer.cpp  parser_generator.cpp
utils/: install_TinyMAT.sh  run_full_parser.sh  run_parser_generator.sh
